Fixed Reject radio button and label alignments for the small screen

--- a/app/styles/_reject.scss
+++ b/app/styles/_reject.scss
@@ -2,21 +2,29 @@
   ul {
     list-style-type: none;
     list-style-position: outside;
-    input[type="radio"] {
-      display: inline-block !important; }
-    input[type="radio"] + label {
-      color: black !important;
-      width: 78%;
-      @media #{$small-only} {
-        font-size: 0.8rem;
+    li {
+      display: table-row;
+
+      input[type="radio"] {
+        // display: inline-block !important;
+        display: table-cell;
       }
-      input {
-        width: 100%;
+      input[type="radio"] + label {
+        display: table-cell;
+        color: black !important;
+        width: 78%;
+        @media #{$small-only} {
+          font-size: 0.8rem;
+        }
+        input {
+          width: 100%;
+        }
+      }
+      input[type="radio"]:checked + label {
+        border: none;
+        background: inherit;
       }
     }
-    input[type="radio"]:checked + label {
-      border: none;
-      background: inherit; }
   }
   .error {
     border-color: $coral-red !important;
